# SPDX-FileCopyrightText: 2023 Kevin Meagher
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Kevin Meagher"}]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities"
]
dependencies = [
  "babel",
  "tabulate",
  "termcolor",
  "tomli; python_version < '3.11'",
  "tzlocal",
  "xdg; python_version < '3.10'",
  "xdg-base-dirs; python_version >= '3.10'"
]
dynamic = ["version", "description"]
license = {file = "COPYING"}
name = "multizone"

[project.optional-dependencies]
dev = ["pre-commit"]
mypy = ["types-tabulate", "types-tzlocal", "types-termcolor"]
test = ["pytest", "pytest-cov"]

[project.scripts]
multizone = "multizone:main"

[tool.coverage.run]
include = ["multizone.py"]

[tool.pylint.format]
max-line-length = "108"

[tool.pylint.message_control]
disable = "R0912,R0914"

[tool.ruff]
line-length = 108
target-version = "py39"

[tool.ruff.lint]
fixable = ["D", "I", "COM"]
ignore = [
  "S101",  # assert
  "D213",  # multi-line-summary-second-line incompatible with multi-line-summary-first-line
  "D203"  # one-blank-line-before-class" incompatible with no-blank-line-before-class
]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"test_mz.py" = ["PLR2004"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{9,10,11,12,13}
isolated_build = True

[testenv]
usedevelop=True
deps = .[test]
commands = pytest
"""
